--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
     <title>World Clock - Aitalina K.</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select>
+        <option value="">Select a city...</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Tokyo</option>
+      </select>
+      <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date">August 15th 2022</div>
+        <div class="time">1:45:13</div>
+      </div>
+      <div class="city">
+        <h2>Sydney</h2>
+        <div class="date">August 15th 2022</div>
+        <div class="time">1:45:13</div>
+      </div>
+    </div>
     <footer>
       This project was coded by Aitalina K. and is
       <a href="https://github.com/EyelidSilver/world-clock" target="_blank">
