Added styling CSS

--- a/index.html
+++ b/index.html
@@ -17,18 +17,22 @@
         <option value="">Tokyo</option>
       </select>
       <div class="city">
-        <h2>Los Angeles</h2>
-        <div class="date">August 15th 2022</div>
-        <div class="time">1:45:13</div>
+        <div>
+          <h2>Los Angeles</h2>
+          <div class="date">August 15th 2022</div>
+        </div>
+        <div class="time">1:45:13 <small> AM</small></div>
       </div>
       <div class="city">
-        <h2>Sydney</h2>
-        <div class="date">August 15th 2022</div>
-        <div class="time">1:45:13</div>
+        <div>
+          <h2>Tokyo</h2>
+          <div class="date">August 15th 2022</div>
+        </div>
+        <div class="time">1:45:13 <small> AM</small></div>
       </div>
     </div>
     <footer>
-      This project was coded by Aitalina K. and is
+      This project was coded by <strong>Aitalina K.</strong> and is
       <a href="https://github.com/EyelidSilver/world-clock" target="_blank">
         open sourced on GitHub
       </a>
