--- a/index.html
+++ b/index.html
@@ -12,25 +12,27 @@
   <body>
     <div class="container">
       <h1>World Clock</h1>
-      <select>
+      <select id="city">
         <option value="">Select a city...</option>
-        <option value="">London</option>
-        <option value="">New York</option>
-        <option value="">Tokyo</option>
+        <option value="Europe/London">London</option>
+        <option value="America/New_York">New York</option>
+        <option value="Asia/Yakutsk">Yakutsk</option>
       </select>
-      <div class="city" id="los-angeles">
-        <div>
-          <h2>Los Angeles</h2>
-          <div class="date">August 15th 2022</div>
+      <div id="cities">
+        <div class="city" id="los-angeles">
+          <div>
+            <h2>Los Angeles</h2>
+            <div class="date">August 15th 2022</div>
+          </div>
+          <div class="time">1:45:13 <small> AM</small></div>
         </div>
-        <div class="time">1:45:13 <small> AM</small></div>
-      </div>
-      <div class="city" id="tokyo">
-        <div>
-          <h2>Tokyo</h2>
-          <div class="date">August 15th 2022</div>
+        <div class="city" id="tokyo">
+          <div>
+            <h2>Tokyo</h2>
+            <div class="date">August 15th 2022</div>
+          </div>
+          <div class="time">1:45:13 <small> AM</small></div>
         </div>
-        <div class="time">1:45:13 <small> AM</small></div>
       </div>
     </div>
     <footer>
