--- a/index.html
+++ b/index.html
@@ -11,30 +11,30 @@
   </head>
   <body>
     <div class="container">
-      <h1>
-        World Clock
-      </h1>
+      <h1>World Clock</h1>
       <select id="city">
         <option value="">Select a city...</option>
         <option value="current">My current location</option>
         <option value="Europe/London">London</option>
         <option value="America/New_York">New York</option>
         <option value="Asia/Yakutsk">Yakutsk</option>
+        <option value="Asia/Almaty">Almaty</option>
+        <option value="Asia/Seoul">Seoul</option>
       </select>
       <div id="cities">
-        <div class="city" id="los-angeles">
+        <div class="city" id="yakutsk">
           <div>
-            <h2>Los Angeles</h2>
-            <div class="date">August 15th 2022</div>
+            <h2>Yakutsk</h2>
+            <div class="date"></div>
           </div>
-          <div class="time">1:45:13 <small> AM</small></div>
+          <div class="time"><small></small></div>
         </div>
         <div class="city" id="tokyo">
           <div>
             <h2>Tokyo</h2>
-            <div class="date">August 15th 2022</div>
+            <div class="date"></div>
           </div>
-          <div class="time">1:45:13 <small> AM</small></div>
+          <div class="time"><small></small></div>
         </div>
       </div>
     </div>
