Added more styling

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           </div>
           <div class="time"><small></small></div>
         </div>
-        <div class="city" id="tokyo">
+        <div class="city" id="amsterdam">
           <div>
-            <h2>Tokyo</h2>
+            <h2>Amsterdam</h2>
             <div class="date"></div>
           </div>
           <div class="time"><small></small></div>
